THRIFT-5753 PHP 8.1 deprecated warning about return type in jsonSerialize functions